@@ -1,5 +1,5 @@
 /*
- * $Id: hid-core.c,v 1.8 2003-06-19 15:37:23 jjoganic Exp $
+ * $Id: hid-core.c,v 1.9 2003-10-09 23:36:07 pingc Exp $
  *
  *  Copyright (c) 1999 Andreas Gal
  *  Copyright (c) 2000-2001 Vojtech Pavlik
@@ -39,6 +39,7 @@
  *    v1.8.1-j1    - added patch for volito
  *    v1.8.1-j2    - added patch for quirks (2.4.18 has none)
  *    v1.8.1-j3    - added patch for I2 6x8 id 0x47
+ *    v1.8.1-j4    - merged changes from 2.4.22
  */
 
 #include <linux/autoconf.h>
@@ -74,7 +75,7 @@
  * Version Information
  */
 
-#define DRIVER_VERSION "v1.8.1-j3"
+#define DRIVER_VERSION "v1.8.1-j4"
 #define DRIVER_AUTHOR "Andreas Gal, Vojtech Pavlik <vojtech@suse.cz>"
 #define DRIVER_DESC "USB HID support drivers"
 
@@ -129,11 +130,15 @@ static struct hid_field *hid_register_field(struct hid_report *report, unsigned 
 	memset(field, 0, sizeof(struct hid_field) + usages * sizeof(struct hid_usage)
 		+ values * sizeof(unsigned));
 
-	report->field[report->maxfield++] = field;
+	report->field[report->maxfield] = field;
 	field->usage = (struct hid_usage *)(field + 1);
 	field->value = (unsigned *)(field->usage + usages);
 	field->report = report;
-
+#if WCM_PATCH_COLLECTION 
+	field->index = report->maxfield++;
+#else
+	report->maxfield++;
+#endif
 	return field;
 }
 
@@ -148,16 +153,47 @@ static int open_collection(struct hid_parser *parser, unsigned type)
 
 	usage = parser->local.usage[0];
 
-	if (type == HID_COLLECTION_APPLICATION
-		&& parser->device->maxapplication < HID_MAX_APPLICATIONS)
-			parser->device->application[parser->device->maxapplication++] = usage;
-
 	if (parser->collection_stack_ptr == HID_COLLECTION_STACK_SIZE) {
 		dbg("collection stack overflow");
 		return -1;
 	}
 
+#if WCM_PATCH_COLLECTION
+        if (parser->device->maxcollection == parser->device->collection_size) {
+                collection = kmalloc(sizeof(struct hid_collection) *
+                                     parser->device->collection_size * 2,
+                                     GFP_KERNEL);
+                if (collection == NULL) {
+                        dbg("failed to reallocate collection array");
+                        return -1;
+                }
+                memcpy(collection, parser->device->collection,
+                       sizeof(struct hid_collection) *
+                       parser->device->collection_size);
+                memset(collection + parser->device->collection_size, 0,
+                       sizeof(struct hid_collection) *
+                       parser->device->collection_size);
+                kfree(parser->device->collection);
+                parser->device->collection = collection;
+                parser->device->collection_size *= 2;
+        }
+
+        parser->collection_stack[parser->collection_stack_ptr++] =
+                parser->device->maxcollection;
+
+        collection = parser->device->collection +
+                parser->device->maxcollection++;
+
+        collection->level = parser->collection_stack_ptr - 1;
+
+        if (type == HID_COLLECTION_APPLICATION)
+                parser->device->maxapplication++;
+#else
+	if (type == HID_COLLECTION_APPLICATION
+		&& parser->device->maxapplication < HID_MAX_APPLICATIONS)
+			parser->device->application[parser->device->maxapplication++] = usage;
 	collection = parser->collection_stack + parser->collection_stack_ptr++;
+#endif
 	collection->type = type;
 	collection->usage = usage;
 
@@ -187,8 +223,13 @@ static unsigned hid_lookup_collection(struct hid_parser *parser, unsigned type)
 {
 	int n;
 	for (n = parser->collection_stack_ptr - 1; n >= 0; n--)
+#if WCM_PATCH_COLLECTION
+		if (parser->device->collection[parser->collection_stack[n]].type == type)
+		 return parser->device->collection[parser->collection_stack[n]].usage;
+#else
 		if (parser->collection_stack[n].type == type)
 			return parser->collection_stack[n].usage;
+#endif
 	return 0; /* we know nothing about this usage type */
 }
 
@@ -202,7 +243,15 @@ static int hid_add_usage(struct hid_parser *parser, unsigned usage)
 		dbg("usage index exceeded");
 		return -1;
 	}
+#if WCM_PATCH_COLLECTION
+        parser->local.usage[parser->local.usage_index] = usage;
+        parser->local.collection_index[parser->local.usage_index] =
+                parser->collection_stack_ptr ?
+                parser->collection_stack[parser->collection_stack_ptr - 1] : 0;
+        parser->local.usage_index++;
+#else
 	parser->local.usage[parser->local.usage_index++] = usage;
+#endif
 	return 0;
 }
 
@@ -223,7 +272,11 @@ static int hid_add_field(struct hid_parser *parser, unsigned report_type, unsign
 		return -1;
 	}
 
+#if WCM_PATCH_COLLECTION
+        if (parser->global.logical_maximum < parser->global.logical_minimum) {
+#else
 	if (parser->global.logical_maximum <= parser->global.logical_minimum) {
+#endif
 		dbg("logical range invalid %d %d", parser->global.logical_minimum, parser->global.logical_maximum);
 		return -1;
 	}
@@ -243,9 +296,13 @@ static int hid_add_field(struct hid_parser *parser, unsigned report_type, unsign
 	field->logical = hid_lookup_collection(parser, HID_COLLECTION_LOGICAL);
 	field->application = hid_lookup_collection(parser, HID_COLLECTION_APPLICATION);
 
-	for (i = 0; i < usages; i++)
+	for (i = 0; i < usages; i++) {
 		field->usage[i].hid = parser->local.usage[i];
-
+#if WCM_PATCH_COLLECTION
+                field->usage[i].collection_index =
+                        parser->local.collection_index[i];
+#endif
+	}
 	field->maxusage = usages;
 	field->flags = flags;
 	field->report_offset = offset;
@@ -482,7 +539,11 @@ static int hid_parser_main(struct hid_parser *parser, struct hid_item *item)
 
 	switch (item->tag) {
 		case HID_MAIN_ITEM_TAG_BEGIN_COLLECTION:
+#if WCM_PATCH_COLLECTION
+                        ret = open_collection(parser, data & 0xff);
+#else
 			ret = open_collection(parser, data & 3);
+#endif
 			break;
 		case HID_MAIN_ITEM_TAG_END_COLLECTION:
 			ret = close_collection(parser);
@@ -551,6 +612,9 @@ static void hid_free_device(struct hid_device *device)
 	}
 
 	if (device->rdesc) kfree(device->rdesc);
+#if WCM_PATCH_COLLECTION
+        if (device->collection) kfree(device->collection);
+#endif
 }
 
 /*
@@ -639,17 +703,37 @@ static struct hid_device *hid_parse_report(__u8 *start, unsigned size)
 		return NULL;
 	memset(device, 0, sizeof(struct hid_device));
 
+#if WCM_PATCH_COLLECTION
+        if (!(device->collection = kmalloc(sizeof(struct hid_collection) *
+                                           HID_DEFAULT_NUM_COLLECTIONS,
+                                           GFP_KERNEL))) {
+                kfree(device);
+                return NULL;
+        }
+        memset(device->collection, 0, sizeof(struct hid_collection) *
+               HID_DEFAULT_NUM_COLLECTIONS);
+        device->collection_size = HID_DEFAULT_NUM_COLLECTIONS;
+#endif
 	for (i = 0; i < HID_REPORT_TYPES; i++)
 		INIT_LIST_HEAD(&device->report_enum[i].report_list);
 
 	if (!(device->rdesc = (__u8 *)kmalloc(size, GFP_KERNEL))) {
+#if WCM_PATCH_COLLECTION
+                kfree(device->collection);
+#endif
 		kfree(device);
 		return NULL;
 	}
 	memcpy(device->rdesc, start, size);
+#if WCM_PATCH_COLLECTION
+        device->rsize = size;
+#endif
 
 	if (!(parser = kmalloc(sizeof(struct hid_parser), GFP_KERNEL))) {
 		kfree(device->rdesc);
+#if WCM_PATCH_COLLECTION
+                kfree(device->collection);
+#endif
 		kfree(device);
 		return NULL;
 	}
@@ -757,7 +841,11 @@ static void hid_process_event(struct hid_device *hid, struct hid_field *field, s
 	if (hid->claimed & HID_CLAIMED_INPUT)
 		hidinput_hid_event(hid, field, usage, value);
 	if (hid->claimed & HID_CLAIMED_HIDDEV)
+#if WCM_PATCH_COLLECTION
+		hiddev_hid_event(hid, field, usage, value);
+#else
 		hiddev_hid_event(hid, usage->hid, value);
+#endif
 }
 
 
@@ -848,6 +936,10 @@ static int hid_input_report(int type, u8 *data, int len, struct hid_device *hid)
 		return -1;
 	}
 
+#if WCM_PATCH_COLLECTION
+        if (hid->claimed & HID_CLAIMED_HIDDEV)
+                hiddev_report_event(hid, report);
+#endif
 	size = ((report->size - 1) >> 3) + 1;
 
 	if (len < size) {
@@ -1045,8 +1137,21 @@ void hid_write_report(struct hid_device *hid, struct hid_report *report)
 	hid_output_report(report, hid->out[hid->outhead].buffer);
 
 #if WCM_PATCH_DRVALUE
+#if WCM_PATCH_COLLECTION
+        if (hid->report_enum[report->type].numbered) {
+                hid->out[hid->outhead].buffer[0] = report->id;
+                hid_output_report(report, hid->out[hid->outhead].buffer + 1);
+                hid->out[hid->outhead].dr.wLength = cpu_to_le16(((report->size + 7) >> 3) + 1);
+        } else {
+                hid_output_report(report, hid->out[hid->outhead].buffer);
+                hid->out[hid->outhead].dr.wLength = cpu_to_le16((report->size + 7) >> 3);
+        }
+
+        hid->out[hid->outhead].dr.wValue = cpu_to_le16(((report->type + 1) << 8) | report->id);
+#else
 	hid->out[hid->outhead].dr.wValue = cpu_to_le16(0x200 | report->id);
 	hid->out[hid->outhead].dr.wLength = cpu_to_le16((report->size + 7) >> 3);
+#endif
 #else
 	hid->out[hid->outhead].dr.value = cpu_to_le16(0x200 | report->id);
 	hid->out[hid->outhead].dr.length = cpu_to_le16((report->size + 7) >> 3);
@@ -1097,8 +1202,8 @@ void hid_init_reports(struct hid_device *hid)
 			while (list != &report_enum->report_list) {
 				report = (struct hid_report *) list;
 				/* JEJ: 2.4.20 patch */
-				usb_set_idle(hid->dev, hid->ifnum, 0, report->id);
 				hid_read_report(hid, report);
+				usb_set_idle(hid->dev, hid->ifnum, 0, report->id);
 				list = list->next;
 			}
 		}
@@ -1114,11 +1219,51 @@ void hid_init_reports(struct hid_device *hid)
 #define USB_DEVICE_ID_WACOM_VOLITO	0x0060
 #define USB_DEVICE_ID_WACOM_PTU		0x0003
 
+#define USB_VENDOR_ID_KBGEAR            0x084e
+#define USB_DEVICE_ID_KBGEAR_JAMSTUDIO  0x1001
+
+#define USB_VENDOR_ID_AIPTEK            0x08ca
+#define USB_DEVICE_ID_AIPTEK_01 0x0001
+#define USB_DEVICE_ID_AIPTEK_10 0x0010
+#define USB_DEVICE_ID_AIPTEK_20 0x0020
+#define USB_DEVICE_ID_AIPTEK_21 0x0021
+#define USB_DEVICE_ID_AIPTEK_22 0x0022
+#define USB_DEVICE_ID_AIPTEK_23 0x0023
+#define USB_DEVICE_ID_AIPTEK_24 0x0024
+
 #define USB_VENDOR_ID_ATEN		0x0557
 #define USB_DEVICE_ID_ATEN_UC100KM	0x2004
 #define USB_DEVICE_ID_ATEN_CS124U	0x2202
 #define USB_DEVICE_ID_ATEN_2PORTKVM	0x2204
 #define USB_DEVICE_ID_ATEN_4PORTKVM	0x2205
+
+#define USB_VENDOR_ID_TOPMAX            0x0663
+#define USB_DEVICE_ID_TOPMAX_COBRAPAD   0x0103
+
+#define USB_VENDOR_ID_HAPP              0x078b
+#define USB_DEVICE_ID_UGCI_DRIVING      0x0010
+#define USB_DEVICE_ID_UGCI_FLYING       0x0020
+#define USB_DEVICE_ID_UGCI_FIGHTING     0x0030
+
+#define USB_VENDOR_ID_GRIFFIN           0x077d
+#define USB_DEVICE_ID_POWERMATE         0x0410 /* Griffin PowerMate */
+#define USB_DEVICE_ID_SOUNDKNOB         0x04AA /* Griffin SoundKnob */
+
+#define USB_VENDOR_ID_ONTRAK    0x0a07
+#define USB_DEVICE_ID_ONTRAK_ADU100     0x0064
+
+#define USB_VENDOR_ID_TANGTOP           0x0d3d
+#define USB_DEVICE_ID_TANGTOP_USBPS2    0x0001
+
+#define USB_VENDOR_ID_OKI               0x070a
+#define USB_VENDOR_ID_OKI_MULITI        0x0007
+
+#define USB_VENDOR_ID_ESSENTIAL_REALITY 0x0d7f
+#define USB_DEVICE_ID_ESSENTIAL_REALITY_P5      0x0100
+
+#define USB_VENDOR_ID_MGE               0x0463
+#define USB_DEVICE_ID_MGE_UPS           0xffff
+#define USB_DEVICE_ID_MGE_UPS1          0x0001
 
 /* JEJ - added for 2.4.18 compatibility */
 #if WCM_PATCH_NOQUIRK
@@ -1160,10 +1305,39 @@ struct hid_blacklist {
 	{ USB_VENDOR_ID_WACOM, USB_DEVICE_ID_WACOM_GRAPHIRE + 4, HID_QUIRK_IGNORE },
 	{ USB_VENDOR_ID_WACOM, USB_DEVICE_ID_WACOM_PTU, HID_QUIRK_IGNORE },
 
+        { USB_VENDOR_ID_KBGEAR, USB_DEVICE_ID_KBGEAR_JAMSTUDIO, HID_QUIRK_IGNORE },
 	{ USB_VENDOR_ID_ATEN, USB_DEVICE_ID_ATEN_UC100KM, HID_QUIRK_NOGET },
 	{ USB_VENDOR_ID_ATEN, USB_DEVICE_ID_ATEN_CS124U, HID_QUIRK_NOGET },
 	{ USB_VENDOR_ID_ATEN, USB_DEVICE_ID_ATEN_2PORTKVM, HID_QUIRK_NOGET },
 	{ USB_VENDOR_ID_ATEN, USB_DEVICE_ID_ATEN_4PORTKVM, HID_QUIRK_NOGET },
+        { USB_VENDOR_ID_AIPTEK, USB_DEVICE_ID_AIPTEK_01, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_AIPTEK, USB_DEVICE_ID_AIPTEK_10, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_AIPTEK, USB_DEVICE_ID_AIPTEK_20, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_AIPTEK, USB_DEVICE_ID_AIPTEK_21, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_AIPTEK, USB_DEVICE_ID_AIPTEK_22, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_AIPTEK, USB_DEVICE_ID_AIPTEK_23, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_AIPTEK, USB_DEVICE_ID_AIPTEK_24, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_GRIFFIN, USB_DEVICE_ID_POWERMATE, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_GRIFFIN, USB_DEVICE_ID_SOUNDKNOB, HID_QUIRK_IGNORE },
+#if WCM_PATCH_COLLECTION
+        { USB_VENDOR_ID_TOPMAX, USB_DEVICE_ID_TOPMAX_COBRAPAD, HID_QUIRK_BADPAD },
+        { USB_VENDOR_ID_HAPP, USB_DEVICE_ID_UGCI_DRIVING, HID_QUIRK_BADPAD|HID_QUIRK_MULTI_INPUT },
+        { USB_VENDOR_ID_HAPP, USB_DEVICE_ID_UGCI_FLYING, HID_QUIRK_BADPAD|HID_QUIRK_MULTI_INPUT },
+        { USB_VENDOR_ID_HAPP, USB_DEVICE_ID_UGCI_FIGHTING, HID_QUIRK_BADPAD|HID_QUIRK_MULTI_INPUT },
+#endif
+        { USB_VENDOR_ID_ONTRAK, USB_DEVICE_ID_ONTRAK_ADU100, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_ONTRAK, USB_DEVICE_ID_ONTRAK_ADU100 + 100, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_ONTRAK, USB_DEVICE_ID_ONTRAK_ADU100 + 200, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_ONTRAK, USB_DEVICE_ID_ONTRAK_ADU100 + 300, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_ONTRAK, USB_DEVICE_ID_ONTRAK_ADU100 + 400, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_ONTRAK, USB_DEVICE_ID_ONTRAK_ADU100 + 500, HID_QUIRK_IGNORE },
+        { USB_VENDOR_ID_TANGTOP, USB_DEVICE_ID_TANGTOP_USBPS2, HID_QUIRK_NOGET },
+        { USB_VENDOR_ID_OKI, USB_VENDOR_ID_OKI_MULITI, HID_QUIRK_NOGET },
+        { USB_VENDOR_ID_ESSENTIAL_REALITY, USB_DEVICE_ID_ESSENTIAL_REALITY_P5, HID_QUIRK_IGNORE },
+#if WCM_PATCH_COLLECTION
+        { USB_VENDOR_ID_MGE, USB_DEVICE_ID_MGE_UPS, HID_QUIRK_HIDDEV },
+        { USB_VENDOR_ID_MGE, USB_DEVICE_ID_MGE_UPS1, HID_QUIRK_HIDDEV },
+#endif
 	{ 0, 0 }
 };
 
@@ -1325,19 +1499,29 @@ static void* hid_probe(struct usb_device *dev, unsigned int ifnum,
 	printk(KERN_INFO);
 
 	if (hid->claimed & HID_CLAIMED_INPUT)
-		printk("input%d", hid->input.number);
+		printk("input");
 	if (hid->claimed == (HID_CLAIMED_INPUT | HID_CLAIMED_HIDDEV))
 		printk(",");
 	if (hid->claimed & HID_CLAIMED_HIDDEV)
 		printk("hiddev%d", hid->minor);
 
 	c = "Device";
+#if WCM_PATCH_COLLECTION
+        for (i = 0; i < hid->maxcollection; i++) {
+                if (hid->collection[i].type == HID_COLLECTION_APPLICATION &&
+                   (hid->collection[i].usage & HID_USAGE_PAGE) == HID_UP_GENDESK &&
+                   (hid->collection[i].usage & 0xffff) < ARRAY_SIZE(hid_types)) {
+                        c = hid_types[hid->collection[i].usage & 0xffff];
+                        break;
+                }
+        }
+#else
 	for (i = 0; i < hid->maxapplication; i++)
 		if ((hid->application[i] & 0xffff) < ARRAY_SIZE(hid_types)) {
 			c = hid_types[hid->application[i] & 0xffff];
 			break;
 		}
-
+#endif
 	printk(": USB HID v%x.%02x %s [%s] on usb%d:%d.%d\n",
 		hid->version >> 8, hid->version & 0xff, c, hid->name,
 		dev->bus->busnum, dev->devnum, ifnum);
